Fix settings page alignment

--- a/core/app/assets/stylesheets/twitter/bootstrap/forms.css.less
+++ b/core/app/assets/stylesheets/twitter/bootstrap/forms.css.less
@@ -133,13 +133,6 @@ textarea:focus:required:invalid {
     margin-bottom: @baseLineHeight;
     .clearfix();
   }
-  // Float the labels left
-  .control-label {
-    float: left;
-    width: @horizontalComponentOffset - 20;
-    padding-top: 5px;
-    text-align: right;
-  }
 
   // Move over buttons in .form-actions to align with .controls
   .form-actions {
