--- a/core/app/assets/stylesheets/users/edit.css.less
+++ b/core/app/assets/stylesheets/users/edit.css.less
@@ -56,6 +56,14 @@
   }
 }
 
+.control-label {
+  float: left;
+  width: 160px;
+  padding-top: 5px;
+  padding-right: 1em;
+  text-align: right;
+}
+
 .notification-settings {
   margin-top: 20px;
 }
